2006-08-23  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/tools-enums.h
	* app/tools/gimptransformtool.[ch]: add support for handles at
	midpoints of edges.

	* app/tools/gimpscaletool.c: use midpoint handles for scaling
	with fixed width or height.  Fixes bug #344955.
	
2006-08-23  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpbaseenums.[ch]: removed "(Fastest)" from "None"
	and added translation context (bug #343576).

	* app/actions/select-actions.c (select_actions): added translation
	context for "None" and "All".

	* app/widgets/gimpactiongroup.c: strip translation context from
	all labels.

	* libgimpwidgets/gimppageselector.c: fixed singular form.

2006-08-23  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpbaseenums.h: do the change for bug #343576 here;
	the .c file is generated.

2006-08-22  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* configure.in
	* plug-ins/Makefile.am
	* plug-ins/common/png.c: revert changes accidentally
	committed in previous commit.
	
2006-08-22  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* libgimpbase/gimpbaseenums.c: Don't label Lanczos as "best".
	Addresses bug #343576.

2006-08-22  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_motion):
	respect "fixed-center" constraint even if "fixed-aspect"
	or "aspect-square" constraints are active.

2006-08-22  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_motion):
	remove some constraining code that shouldn't have been there,
	and simplify a bit.

2006-08-22  Sven Neumann  <sven@gimp.org>

	* app/composite/gimp-composite-regression.[ch]: use gulong instead
	of u_long. Should fix bug #352221.

2006-08-22  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpwire.h
	* libgimpbase/gimpreloc.h
	* libgimp/gimpdrawablepreview.h
	* libgimp/gimptile.h
	* libgimp/gimpunitcache.h
	* libgimpthumb/gimpthumb-utils.h
	* libgimpwidgets/gimpcolorarea.h